--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,3 @@
-
 ###> symfony/framework-bundle ###
 /.env.local
 /.env.local.php
@@ -9,4 +8,5 @@
 /vendor/
 ###< symfony/framework-bundle ###
 
-./promts
+/prompts
+/.idea
