--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,4 +1,9 @@
 {
+  "scripts": {
+    "dev": "vite",
+    "build": "vite build",
+    "preview": "vite preview"
+  },
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.2.4",
     "tailwindcss": "^4.1.11",
