--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,6 +6,7 @@
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.2.4",
+    "cypress": "^13.7.3",
     "tailwindcss": "^4.1.11",
     "vite": "^6.3.5"
   },
