--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,14 +1,33 @@
 {
+  "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "test": "vitest",
+    "test:ui": "vitest --ui",
+    "test:coverage": "vitest --coverage",
+    "test:watch": "vitest --watch",
+    "test:unit": "vitest run",
+    "test:integration": "vitest run tests/integration",
+    "test:all": "npm run test:unit && npm run test:e2e",
+    "test:e2e": "cypress run",
+    "test:e2e:open": "cypress open",
+    "test:e2e:docker": "docker-compose --profile testing run --rm cypress run",
+    "test:e2e:docker:open": "docker-compose --profile testing run --rm cypress open"
   },
   "devDependencies": {
+    "@testing-library/jest-dom": "^6.6.4",
+    "@testing-library/vue": "^8.1.0",
     "@vitejs/plugin-vue": "^5.2.4",
+    "@vitest/ui": "^3.2.4",
+    "@vue/test-utils": "^2.4.6",
     "cypress": "^13.7.3",
+    "jsdom": "^26.1.0",
+    "msw": "^2.10.4",
     "tailwindcss": "^4.1.11",
-    "vite": "^6.3.5"
+    "vite": "^6.3.5",
+    "vitest": "^3.2.4"
   },
   "dependencies": {
     "@tailwindcss/postcss": "^4.1.11",
