feat: implement JWT authentication; add LexikJWTAuthenticationBundle, configure security settings, and update environment variables

--- a/.gitignore
+++ b/.gitignore
@@ -8,7 +8,9 @@
 /vendor/
 ###< symfony/framework-bundle ###
 
-/prompts
-/arq
+/agents
 /.idea
 /frontend/node_modules
+###> lexik/jwt-authentication-bundle ###
+/config/jwt/*.pem
+###< lexik/jwt-authentication-bundle ###
