--- a/config/services.yaml
+++ b/config/services.yaml
@@ -15,6 +15,13 @@ services:
     # this creates a service per class whose id is the fully-qualified class name
     App\:
         resource: '../src/'
+        exclude:
+            - '../src/Domain/*/ValueObject/'
+            - '../src/Domain/Shared/ValueObject/'
+            - '../src/Domain/*/User.php'
+            - '../src/Domain/*/Employee.php'
+            - '../src/Domain/*/Vacation.php'
+            - '../src/Domain/*/Payroll.php'
 
     # add more service definitions when explicit configuration is needed
     # please note that last definitions always *replace* previous ones
