feat: update Tailwind CSS configuration; add base, components, and utilities imports, configure PostCSS plugins, and enhance Vite server settings

--- a/.gitignore
+++ b/.gitignore
@@ -11,6 +11,8 @@
 /agents
 /.idea
 /frontend/node_modules
+/frontend/cypress
+
 ###> lexik/jwt-authentication-bundle ###
 /config/jwt/*.pem
 ###< lexik/jwt-authentication-bundle ###
