--- a/composer.json
+++ b/composer.json
@@ -90,6 +90,7 @@
         "phpunit/phpunit": "^11.5",
         "symfony/browser-kit": "7.3.*",
         "symfony/css-selector": "7.3.*",
+        "symfony/http-client": "7.3.*",
         "symfony/maker-bundle": "^1.64"
     }
 }
