--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,9 +1,10 @@
 {
   "type": "module",
   "scripts": {
-    "dev": "vite",
+    "dev": "vite --host 0.0.0.0 --port 5173",
     "build": "vite build",
-    "preview": "vite preview",
+    "preview": "vite preview --host 0.0.0.0 --port 5173",
+    "serve": "vite preview --host 0.0.0.0 --port 5173",
     "test": "vitest",
     "test:ui": "vitest --ui",
     "test:coverage": "vitest --coverage",
@@ -22,15 +23,16 @@
     "@vitejs/plugin-vue": "^5.2.4",
     "@vitest/ui": "^3.2.4",
     "@vue/test-utils": "^2.4.6",
-    "cypress": "^13.7.3",
+    "autoprefixer": "^10.4.20",
+    "cypress": "^13.17.0",
     "jsdom": "^26.1.0",
     "msw": "^2.10.4",
-    "tailwindcss": "^4.1.11",
+    "postcss": "^8.4.49",
+    "tailwindcss": "^3.4.17",
     "vite": "^6.3.5",
     "vitest": "^3.2.4"
   },
   "dependencies": {
-    "@tailwindcss/postcss": "^4.1.11",
     "axios": "^1.11.0",
     "vue": "^3.5.18"
   }
