--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -13,7 +13,7 @@
         <server name="APP_ENV" value="test" force="true" />
         <server name="SHELL_VERBOSITY" value="-1" />
         <env name="KERNEL_CLASS" value="App\Kernel" />
-        <server name="DATABASE_URL" value="postgresql://app:!ChangeMe!@127.0.0.1:5432/app_test?serverVersion=16&amp;charset=utf8" />
+        <server name="DATABASE_URL" value="postgresql://symfony:change-me@127.0.0.1:5432/symfony?serverVersion=15&amp;charset=utf8" />
 
         <!-- ###+ lexik/jwt-authentication-bundle ### -->
         <env name="JWT_SECRET_KEY" value="%kernel.project_dir%/config/jwt/private.pem"/>
