feat: update .gitignore; add phpunit result cache to ignore list

--- a/.gitignore
+++ b/.gitignore
@@ -12,6 +12,7 @@
 /.idea
 /frontend/node_modules
 /frontend/cypress
+/.phpunit.result.cache
 
 ###> lexik/jwt-authentication-bundle ###
 /config/jwt/*.pem
