--- a/config/services.yaml
+++ b/config/services.yaml
@@ -25,3 +25,19 @@ services:
 
     # add more service definitions when explicit configuration is needed
     # please note that last definitions always *replace* previous ones
+
+    # Explicit service configuration for AuthenticationService
+    App\Application\User\Service\AuthenticationService:
+        autowire: true
+        autoconfigure: true
+        public: true
+
+    # Make JwtTokenService public for integration tests
+    App\Application\User\Service\JwtTokenService:
+        autowire: true
+        autoconfigure: true
+        public: true
+
+    # Interface binding for UserRepository
+    App\Domain\User\UserRepositoryInterface:
+        alias: App\Infrastructure\Doctrine\Repository\UserRepository
