--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -47,7 +47,7 @@ services:
     ports:
       - "5173:5173"
     environment:
-      - VITE_API_URL=http://app:8000/api
+      - VITE_API_BASE_URL=http://app:8000/api
     command: sh -c "npm install && npm run dev -- --host 0.0.0.0"
     depends_on:
       - app
