--- a/frontend/.env
+++ b/frontend/.env
@@ -1,4 +1,4 @@
 VITE_PORT=5173
-VITE_API_URL=http://app:8000/api
+VITE_API_URL=http://localhost:8000/api
 VITE_APP_NAME="HR System"
 VITE_APP_ENV=development
